# sysbro

./: .gitignore  CMakeLists.txt  README.md  sysbro-express.desktop  sysbro-file-shredder.desktop  sysbro-network-test.desktop  sysbro-startup-apps.desktop  sysbro.desktop  sysbro.pro  translate_generation.sh
cmake/: FindProcps.cmake
debian/: changelog  control  copyright  rules  screen-checker.install
delete-files/: sysbro-delete-files.pro
file-shredder/: CMakeLists.txt  file-shredder.pro  filemodel.h  fileview.h  main.cpp  mainwindow.cpp  mainwindow.h  resoureces.qrc  utils.h
file-shredder/translations/: sysbro-file-shredder.ts
network-test/: homepage.cpp  mainwindow.cpp  network-test.pro  networkmanager.cpp
screen-checker/: main.cpp  mainwindow.cpp  mainwindow.h  screen-checker.pro
screen-checker/translations/: sysbro-screen-checker.ts  sysbro-screen-checker_zh_CN.qm  sysbro-screen-checker_zh_CN.ts
service-manager/: CMakeLists.txt  main.cpp  service-manager.pro
src/: .utils.cpp.kate-swp  cleanerpage.cpp  cleanerpage.h  com.sysbro.pkexec.delete-files.policy  com.sysbro.pkexec.service.mgr.policy  generate_translations.sh  homepage.cpp  homepage.h  leftsidebar.cpp  main.cpp  mainwindow.cpp  mainwindow.h  monitorthread.cpp  monitorthread.h  resources.qrc  scannedwidget.cpp  scannedwidget.h  serviceitemdelegate.cpp  servicemodel.cpp  serviceview.cpp  speeduppage.cpp  src.pro  titlebar.cpp  titlebar.h  toolsitemdelegate.cpp  toolslistmodel.cpp  toolslistmodel.h  toolspage.cpp  toolspage.h  toolsview.cpp  toolsview.h  treeitemdelegate.cpp  treeitemdelegate.h  treewidget.cpp  utils.cpp  utils.h
src/cleanup_page/: cleanerpage.cpp  cleanerpage.h  scannedwidget.cpp  scannedwidget.h  treewidget.cpp  treewidget.h
src/home_page/: homepage.cpp  homepage.h  monitorthread.cpp  monitorthread.h  monitorwidget.cpp  monitorwidget.h
src/info_page/: cpuinfo.cpp  cpuinfo.h  infolabel.cpp  infolabel.h  infopage.cpp  infopage.h  pciinfo.cpp  pciinfo.h  systeminfo.cpp  systeminfo.h
src/resources/: style.qss
src/sensors_wrap/: chip.cpp  feature.cpp  feature.h  sensors.cpp
src/speedup_page/: serviceitemdelegate.cpp  serviceitemdelegate.h  servicemodel.cpp  servicemodel.h  serviceview.h  speeduppage.cpp  speeduppage.h
src/tools_page/: toolsitemdelegate.cpp  toolsitemdelegate.h  toolslistmodel.cpp  toolsview.cpp  toolsview.h
src/translations/: sysbro.ts  sysbro_zh_CN.qm  sysbro_zh_CN.ts
src/widgets/: dotwidget.cpp  dotwidget.h  horizontalseparator.cpp  horizontalseparator.h  iconlabel.cpp  iconlabel.h  loadingprogresswidget.cpp  loadingprogresswidget.h  monitorwidget.cpp  monitorwidget.h  progressbar.cpp  progressbar.h  progressmeterwidget.cpp  progressmeterwidget.h  pushbutton.cpp  pushbutton.h  roundedlabel.cpp  roundedlabel.h  roundedwidget.cpp  roundedwidget.h  trayicon.cpp  trayicon.h
ssf2fcitx_skin/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  qt2dtk.sh  res.qrc  ssf2fcitx_skin.pro  ssf2fcitx_skin_deepin.pro  ssf2skin  widget.cpp  widget.h  widget.ui  给rekols看.doc
startup-apps/: CMakeLists.txt  createwindow.cpp  createwindow.h  desktopproperties.h  itemdelegate.cpp  listmodel.h  listview.h  mainwindow.cpp  mainwindow.h  resources.qrc  startup-apps.pro
startup-apps/translations/: sysbro-startup-apps.ts  sysbro-startup-apps_zh_CN.qm
sysbro-boot-assistant/: main.cpp  sysbro-boot-assistant.pro
sysbro-delete-files/: CMakeLists.txt  main.cpp  sysbro-delete-files.pro
sysbro-express/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  sysbro-express.pro
sysbro-file-shredder/: fileitemdelegate.cpp  fileitemdelegate.h  filemodel.cpp  fileview.cpp  main.cpp  mainwindow.cpp  mainwindow.h  sysbro-file-shredder.pro  utils.cpp
sysbro-file-shredder/translations/: sysbro-file-shredder_zh_CN.qm  sysbro-file-shredder_zh_CN.ts
sysbro-info/: contentwidget.cpp  contentwidget.h  cpuinfo.cpp  cpuinfo.h  leftsidebar.cpp  leftsidebar.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryinfo.cpp  memoryinfo.h  overviewpage.cpp  overviewpage.h  resources.qrc  sysbro-info.pro  systeminfo.cpp
sysbro-info/resources/: main.qss
sysbro-network-test/: CMakeLists.txt  homepage.cpp  homepage.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  resoureces.qrc  sysbro-network-test.pro
sysbro-startup-apps/: autostartmanager.cpp  autostartmanager.h  createwindow.cpp  createwindow.h  desktopproperties.cpp  editdialog.cpp  editdialog.h  itemdelegate.cpp  itemdelegate.h  listmodel.cpp  listmodel.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  resources.qrc  sysbro-startup-apps.pro
sysbro-startup-apps/translations/: sysbro-startup-apps.ts  sysbro-startup-apps_zh_CN.qm  sysbro-startup-apps_zh_CN.ts
